--- a/blood-donation-support/package.json
+++ b/blood-donation-support/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "sass": "^1.89.2",
     "scss": "^0.2.4",
