--- a/blood-donation-support/package.json
+++ b/blood-donation-support/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.0",
     "sass": "^1.89.2",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
