--- a/blood-donation-support/package.json
+++ b/blood-donation-support/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
