--- a/blood-donation-support/package.json
+++ b/blood-donation-support/package.json
@@ -25,6 +25,7 @@
     "recharts": "^3.1.0",
     "sass": "^1.89.2",
     "scss": "^0.2.4",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
